<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.coins.MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_coins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="120dp"
        android:clipToPadding="false"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_empty_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_search_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_empty_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="3dp"
        android:text="@string/empty_search_desc"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_empty_title" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chip_group"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_active_coins"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:tag="@string/tag_active_coins"
            android:layout_height="wrap_content"
            android:text="@string/active_coins" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_inactive_coins"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:tag="@string/tag_in_active_coins"
            android:layout_height="wrap_content"
            android:text="@string/inactive_coins" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_only_tokens"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:tag="@string/tag_only_tokens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_tokens" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_only_coins"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:tag="@string/tag_only_coins"
            android:layout_height="wrap_content"
            android:text="@string/only_coins" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_new_coins"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:tag="@string/tag_new_coins"
            android:layout_height="wrap_content"
            android:text="@string/new_coins" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>